# job-market-intelligence

./: README.md  main.py  pyproject.toml
analysis/: data_cleaning.py  exploratory_analysis.ipynb  skill_trends_analysis.ipynb
analysis/.ipynb_checkpoints/: exploratory_analysis-checkpoint.ipynb
dashboards/: Data-Analysis-on-Job-Market-main.code-workspace  build_dashboard.py
scraping/: job_scraper.py
utils/: helpers.py
