[project]
name = "jobmarketintelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "adjusttext>=1.3.0",
    "beautifulsoup4>=4.14.3",
    "datasets>=3.1.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
]
